# tibco-ems-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  codecov.yml  pr.yml
examples/: admin_create_bridge.rs  admin_create_queue.rs  admin_create_topic.rs  admin_delete_bridge.rs  admin_delete_queue.rs  admin_delete_topic.rs  admin_get_server_state.rs  admin_list_all_queues.rs  admin_list_all_topics.rs  c_binding_send_text_message.rs  receive_map_message.rs  receive_message_and_reply.rs  receive_message_header.rs  receive_message_selector.rs  receive_message_transaction.rs  receive_shared_durable.rs  receive_text_message_from_queue.rs  receive_topic_message.rs  send_binary_message_to_queue.rs  send_map_message.rs  send_message_and_wait_for_reply.rs  send_message_header.rs  send_text_message_to_queue.rs  stream_text_message.rs
src/: c_binding.rs  lib.rs
src/admin/: mod.rs
src/stream/: mod.rs
tests/: admin.rs  connection.rs  consumer.rs  local_ems.rs  message.rs  mock.rs  serde.rs  session.rs  stream.rs
